--- a/css/index-m.css
+++ b/css/index-m.css
@@ -21,9 +21,13 @@ html, body {
     content: "移动端适配中......";
     position: fixed;
     top: 50%;
-    left: 50%;
+    width: 100%;
     font-size: 32px;
-    transform: translate(-50%,-50%);
+    font-family: 'Pixel';
+    transform: translateY(-50%);
+    text-align: center;
+    color: var(--cafe_text2);
+    text-shadow: 2px 2px 2px rgba(0,0,0,.3);
 }
 .section div{
     display: none;
