--- a/css/index.css
+++ b/css/index.css
@@ -670,20 +670,53 @@ body{
     top: 100px;
     padding: 20px 40px;
     width: 780px;
+    background-size: cover ;
+    background-position: center bottom;
     background-color: rgba(0, 0, 0, .8);
     border-radius: 10px;
     box-shadow: 3px 3px 3px 3px rgba(0,0,0,.5);
     border: 3px solid #ffffff;
     opacity: 0;
+    cursor: default;
+}
+.pop-story-cont::before{
+    content: "";
+    position: absolute;
+    left: -50px;
+    top: -35px;
+    width: 80px;
+    height: 80px;
+    background: url(../images/bef_image/bef_16.png);
+    background-size: 80px 80px;
+}
+.pop-story-cont::after{
+    content: "";
+    position: absolute;
+    bottom: -20px;
+    right: -40px;
+    width: 77px;
+    height: 86px;
+    background: url(../images/bef_image/bef_18.png);
+    background-size: 77px 86px;
 }
 .pop-story-cont .title{
-    font-size: 40px;
+    font-family: "Pixel";
+    font-size: 32px;
     color: #ffffff;
+    text-shadow: 2px 2px 0 rgba(0, 0, 0, .9);
+    border-bottom: 1px solid #ffffff;
+    margin-bottom: 10px;
 }
 .pop-story-cont .content{
+    position: relative;
+    padding: 0 5px 5px;
     text-indent: 2em;
-    font-size: 20px;
+    font-size: 16px;
+    line-height: 22px;
     color: #ffffff;
+    border-radius: 0 0 10px 10px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, .9);
+    background-color: rgba(0, 0, 0, .3);
 }
 .pop-close{
     position: absolute;
