--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,7 @@ body{
 /* part1 */
 .part1{
     width: 100%;
-    background: url(../images/background/bg1.jpg) center center no-repeat;
+    background: url(../images/background/part1_bg.jpg) center center no-repeat;
     background-size: cover;
 }
 .part1-cont{
