--- a/css/index-m.css
+++ b/css/index-m.css
@@ -67,6 +67,24 @@ html, body {
     color: var(--cafe_text2);
     text-shadow: 2px 2px 3px rgba(0,0,0,.5);
 }
+.part1-cont .kv-cent{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    padding: 20px 15px;
+    width: 600px;
+    margin-left: -300px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255,.7);
+}
+.part1-cont .kv-cent p:nth-of-type(1){
+    font-size: 20px;
+    text-indent: 2em;
+}
+.part1-cont .kv-cent p:nth-of-type(2){
+    font-size: 16px;
+    text-align: right;
+}
 
 /* part2 */
 .part2{
