--- a/css/index-m.css
+++ b/css/index-m.css
@@ -100,6 +100,14 @@ html, body {
     margin: 0 auto;
     width: 660px;
     height: 820px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255,.7);
+}
+.head-cover{
+    width: 135px;
+    height: 120px;
+    background: url(../images/cover.jpg);
+
 }
 
 /* part3 */
