--- a/css/index.css
+++ b/css/index.css
@@ -152,6 +152,11 @@ body{
     pointer-events:none;
     transform:scaleX(-1);
 }
+#part2-wrap{
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
 .part2-left{
     padding: 30px 10px 10px;
     width: 35%;
