--- a/css/common.css
+++ b/css/common.css
@@ -3,15 +3,19 @@
 	src: url(../fonts/Quanxiaosi_PixelFont.ttf);
 }
 :root{
-	--cafe_text1:#4d3900;
-	--cafe_text2:#8b4513;
+	--cafe_color1:#4d3900;
+	--cafe_color2:#8b4513;
+	--white-color1: #ffffff;
+	--white-color2: #e5e7eb;
+	--black-color1: #000000;
 	--transparent:url(data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==)
 }
 .hide-text{
 	font-size: 0;
 	text-indent: -9999;
 	overflow: hidden;
-	opacity: 0}
+	opacity: 0
+}
 .loading-cont {
 	display: flex;
 	justify-content: center;
@@ -43,19 +47,3 @@
 
 /* 禁止ie渲染 */
 #ie-pop{position:absolute;z-index: 99999;width: 100%;height: 100vh;background-color: black;color: #ffffff;text-align: center; line-height: 100vh;font-size: 26px;}
-
-@keyframes diamondBowlUp_1{0%{width:12px;height:12px;opacity:.3}
-	100%{width:22px;height:22px;opacity:.8}
-}
-@keyframes diamondBowlUp_2{0%{width:12px;height:12px;opacity:.1}
-	100%{width:14px;height:14px;opacity:.5}
-}
-@keyframes MarioJump{0%{top:-30px}
-	50%{top:-50px}
-	100%{top:-30px}
-}
-@keyframes CubeSway{0%{left:15px;bottom:20px;transform:rotateZ(0deg)}
-	33%{left:15px;bottom:20px;transform:rotateZ(-15deg)}
-	66%{left:15px;bottom:20px;transform:rotateZ(15deg)}
-	100%{left:15px;bottom:20px;transform:rotateZ(0deg)}
-}
