--- a/css/index.css
+++ b/css/index.css
@@ -130,7 +130,49 @@ body{background-color:#19191b;overflow-x:hidden;overflow-y:hidden}
 }
 
 .part2-right {
-    padding-top: 140px;
+    position: relative;
+    padding: 140px 30px 0;
     width: 698px;
+}
+.detail-item {
+    width: 638px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 20px;
+    line-height: 32px;
+    color: var(--cafe_color1);
+    border-bottom: 1px solid var(--black-color1);
+}
+.detail-item .text-key {
+    display: inline-block;
+    width: 102px;
+    text-align: justify;
+    text-align-last: justify;
+    color: var(--black-color1);
+    /*border-bottom: 1px solid var(--black-color1);*/
+}
+.detail-item .text-value {
+    padding: 0 10px;
+}
+.detail-item .center-mask {
+    position: relative;
+    flex: 1;
+}
+.detail-item .center-mask:before {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed var(--white-color1);
+}
+.self-intro {
+    position: absolute;
+    bottom: 0;
+    width: 638px;
+    height: 120px;
+    background-color: var(--white-color2);
 }
 /* ========================= BODY ========================= */
