--- a/css/index.css
+++ b/css/index.css
@@ -337,8 +337,11 @@ body {
 }
 .product-item-container {
     position: absolute;
-    width: 500px;
+    bottom: 0;
+    right: 80px;
+    width: 570px;
     height: 360px;
-    background-color: #ccc;
+    background-color: #333;
+    opacity: 0;
 }
 /* ========================= BODY ========================= */
