feat: update product load animation

--- a/css/index.css
+++ b/css/index.css
@@ -343,5 +343,9 @@ body {
     height: 360px;
     background-color: #333;
     opacity: 0;
+    pointer-events: none;
+}
+.product-item-container.on {
+    pointer-events: auto;
 }
 /* ========================= BODY ========================= */
