--- a/css/index.css
+++ b/css/index.css
@@ -305,12 +305,40 @@ body {
     margin: 80px auto 0;
     width: 800px;
     height: 400px;
+    /*-webkit-mask-image: -webkit-linear-gradient(right, rgba(0, 0, 0, 0) 5%, rgba(0, 0, 0, 1) 60%);*/
+            mask-image: -webkit-linear-gradient(right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 40%);
 }
 .part3 .part3-swiper .swiper-slide {
+    position: relative;
+    padding: 16px;
     width: 520px;
     height: 100%;
-    background-color: #ddd;
+    background-color: #EEEEEE;
     border-radius: 5px;
+    user-select: none;
+}
+.part3 .part3-swiper .swiper-slide .title {
+    margin-bottom: 12px;
+    font-size: 32px;
+}
+.part3 .part3-swiper .swiper-slide .entry {
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    font-size: 16px;
+}
+.part3 .part3-swiper .swiper-slide .entry li {
+    padding: 0 16px;
+    margin-bottom: 6px;
+    list-style: none;
+}
+.part3 .part3-swiper .swiper-slide .entry .first {
+    font-size: 20px;
+    font-weight: 800;
+}
+.part3 .part3-swiper .swiper-slide .entry .last a {
+    color: skyblue;
+    text-decoration: underline;
 }
 
 /* ========================= BODY ========================= */
