--- a/css/index.css
+++ b/css/index.css
@@ -89,6 +89,7 @@ body {
 }
 
 .wrap {
+    position: relative;
     max-width: 1920px;
     margin: 0 auto;
     background-color: var(--white-color1);
@@ -98,9 +99,9 @@ body {
 
 /* ========================= BODY ========================= */
 .page-number {
-    position: fixed;
-    top: 0;
-    left: 0;
+    position: sticky;
+    bottom: 0px;
+    left: 410px;
     width: 40px;
     height: 40px;
     background-color: var(--white-color2);
@@ -304,7 +305,7 @@ body {
 .part3 .part3-swiper {
     margin: 80px auto 0;
     width: 800px;
-    height: 400px;
+    height: 440px;
     /*-webkit-mask-image: -webkit-linear-gradient(right, rgba(0, 0, 0, 0) 5%, rgba(0, 0, 0, 1) 60%);*/
             mask-image: -webkit-linear-gradient(right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 40%);
 }
@@ -316,6 +317,10 @@ body {
     background-color: #EEEEEE;
     border-radius: 5px;
     user-select: none;
+}
+.part3 .part3-swiper .swiper-slide:last-of-type {
+    width: 240px;
+    opacity: 0;
 }
 .part3 .part3-swiper .swiper-slide .title {
     margin-bottom: 12px;
@@ -339,6 +344,47 @@ body {
 .part3 .part3-swiper .swiper-slide .entry .last a {
     color: skyblue;
     text-decoration: underline;
+}
+
+
+.part4 .part4-title-model {
+    position: relative;
+    letter-spacing: 4px;
+    text-indent: 8px;
+}
+.part4 .part4-title {
+    padding: 0 10px;
+    position: absolute;
+    right: 10px;
+    background-color: #fff;
+    z-index: 10;
+}
+.part4 .part4-title-line {
+    position: absolute;
+    top: 16px;
+    width: 100%;
+    height: 2px;
+    background-color: #000;
+}
+
+
+.part4 .image-swiper-cont {
+    margin: 60px auto 0;
+    width: 800px;
+    height: 200px;
+}
+.part4 .image-swiper-cont .title {
+    margin-bottom: 8px;
+    font-family: Pixel;
+    font-size: 24px;
+    line-height: 1;
+}
+.part4 .image-swiper-cont .image-swiper {
+    width: 100%;
+    overflow: hidden;
+}
+.part4 .image-swiper-cont .image-swiper .swiper-slide {
+    height: 200px;
 }
 
 /* ========================= BODY ========================= */
